--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -726,6 +726,7 @@ button.tile-button {
     }
 
     &--square {
+        align-self: flex-start;
         flex-basis: 165px;
         flex-grow: 0;
         min-height: 165px;
