related to UIP-3833: MD-size margin for TextBlock

--- a/packages/end-user/src/css/components/_text-block.scss
+++ b/packages/end-user/src/css/components/_text-block.scss
@@ -44,6 +44,10 @@
         margin-bottom: $spacing-xs;
     }
 
+    &--margin-md {
+        margin-bottom: $spacing-md;
+    }
+
     &--xxlarge,
     &--margin-xx {
         margin-bottom: $spacing-xx;
