HeroMultiBarChart: The date cut in the end of the chart

--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -90,6 +90,9 @@
         .recharts-tooltip-wrapper {
             margin-top: -5px;
         }
+        .recharts-surface {
+            overflow: visible;
+        }
     }
 
     &__bottom-chart {
