UIP-3833: rendering details if provided to AccountTable; updated name section text color according to mockups

--- a/packages/end-user/src/css/components/_account-table.scss
+++ b/packages/end-user/src/css/components/_account-table.scss
@@ -69,6 +69,10 @@
     }
 
     &__row-name {
-        color: $color-charting-indigo;
+        color: $color-accent-neutral-20;
+    }
+
+    &__row-subdetails {
+        color: $color-neutral-20;
     }
 }
