UIP-3760: Range Slider

--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -36,6 +36,7 @@
 @import 'row-selector';
 @import 'searchbar';
 @import 'settings-sections';
+@import 'slider';
 @import 'status-indicators';
 @import 'tables';
 @import 'tabs';
