UIP-3742: Social login template

--- a/packages/ui-library/src/css/_colorpicker.scss
+++ b/packages/ui-library/src/css/_colorpicker.scss
@@ -60,6 +60,19 @@
                     transform: translate(-50%, -50%);
                 }
             }
+
+            &--small {
+                height: 24px;
+                width: 24px;
+
+                &:hover {
+                    &:after {
+                        height: 24px;
+                        width: 24px;
+                        padding: 1px;
+                    }
+                }
+            }
         }
     }
 
