Removing state, other changes.

--- a/packages/ui-library/src/css/_details-tooltip.scss
+++ b/packages/ui-library/src/css/_details-tooltip.scss
@@ -182,7 +182,7 @@
         }
     }
 
-    .details-close-black {
+    .details-close--black {
         position: absolute;
         top: $spacing-md;
         right: $spacing-md;
