--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -74,9 +74,9 @@
 @import './components/profile-image';
 @import './components/column';
 @import './components/phone-input';
+@import './components/social-button';
 
 // Spacing components are after so they take precedence
-
 @import './components/form-aside';
 @import './components/stack';
 
