add background function to slider and clean up code

--- a/packages/ui-library/src/css/_slider.scss
+++ b/packages/ui-library/src/css/_slider.scss
@@ -4,6 +4,10 @@
     height: 10px;
     width: 100%;
 
+    :focus {
+        border: 2px blue solid;
+    }
+
     &--disabled {
         opacity: $inactive-opacity;
     }
