UIP-3867: Fix branding template

--- a/packages/ui-library/src/css/_colorpicker.scss
+++ b/packages/ui-library/src/css/_colorpicker.scss
@@ -31,7 +31,7 @@
                 font-weight: 500;
                 width: 75px;
                 @include break-word;
-                text-align: center;
+                text-align: left;
             }
         }
 
