--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -688,14 +688,14 @@ button.tile-button {
 
         &-left {
             position: absolute;
-            top: $spacing-md;
-            left: $spacing-sm;
+            top: $spacing-xs;
+            left: $spacing-xs;
         }
 
         &-right {
             position: absolute;
-            top: $spacing-md;
-            right: $spacing-sm;
+            top: $spacing-xs;
+            right: $spacing-xs;
         }
     }
 
@@ -1039,23 +1039,22 @@ button.tile-button--stacked-small {
 .tile-button__grid {
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(#{$spacing-sm} * -1);
-    margin-right: calc(#{$spacing-sm} * -1);
 
     & > * {
-        flex: 1;
-        flex-grow: 0;
-        min-height: 300px;
-        flex-basis: calc((100% / 3) - #{$spacing-sm} * 2) !important;
+        flex-basis: calc((100% / 3) - #{$spacing-sm} * 2);
         box-sizing: border-box;
         margin: 0 $spacing-sm $spacing-md $spacing-sm;
 
+        .tile-button__content {
+            min-height: 350px;
+        }
+
         @media only screen and (max-width: 1250px) {
-            flex-basis: calc((100% / 2) - #{$spacing-sm} * 2) !important;
+            flex-basis: calc((100% / 2) - #{$spacing-sm} * 2);
         }
 
         @media only screen and (max-width: 1000px) {
-            flex-basis: 100% !important;
+            flex-basis: 100%;
         }
     }
 }
