UIP-3759: Serialized data long string issue

--- a/packages/end-user/src/css/components/_serialized-data.scss
+++ b/packages/end-user/src/css/components/_serialized-data.scss
@@ -21,6 +21,7 @@
     &__key {
         font-weight: 600;
         padding-right: $spacing-md;
+        word-break: normal;
     }
 
     &__value {
