Exposed the FormValidatorResult context consumer component as well as a custom hook that does the same job. Also added documentation.

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -1586,6 +1586,7 @@ input[type=file] {
     .input-container:after {
         @include dropdown-caret();
         cursor: pointer;
+        pointer-events: unset;
 
         transition: $default-input-transition;
     }
