UIP-3886: enforcing word-wrap for long messages

--- a/packages/end-user/src/css/shared/_messages.scss
+++ b/packages/end-user/src/css/shared/_messages.scss
@@ -51,6 +51,7 @@
     }
     .message {
         @include flexbox();
+        @include break-word;
         pointer-events: auto;
         align-items: center;
         clear: both;
