--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -72,6 +72,7 @@
         margin: 0 auto;
         width: 100%;
         box-sizing: border-box;
+        @include break-word;
 
         animation: fade-in 0.7s;
 
