UIP-3847: Added Ping logo to iconfont

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -547,6 +547,11 @@
     content: $icon-pin;
   }
 }
+.icon-ping-logo {
+  &:before {
+    content: $icon-ping-logo;
+  }
+}
 .icon-play {
   &:before {
     content: $icon-play;
