--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -111,6 +111,7 @@ $icon-on-off: add-backslash("e922");
 $icon-org-chart: add-backslash("e923");
 $icon-overview: add-backslash("6f");
 $icon-pin: add-backslash("4e");
+$icon-ping-logo: add-backslash("e95d");
 $icon-play: add-backslash("e924");
 $icon-plus: add-backslash("2b");
 $icon-plus-rounded: add-backslash("2a");
