--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -333,6 +333,11 @@ label {
         .password-meter {
             margin: 6px 0 0;
         }
+        &--flex-icon-left {
+            input {
+                padding: 4px 30px 3px;
+            }
+        }
     }
 
     &.input-textarea {
@@ -3324,6 +3329,10 @@ label.input-text--right-icon {
     &__reveal {
         margin-left: 25px;
     }
+
+    &__icon-left {
+        margin-left: 30px;
+    }
 }
 
 // IE-specific CSS
@@ -3338,6 +3347,10 @@ label.input-text--right-icon {
 
         &__reveal {
             margin-left: 55px;
+        }
+
+        &__icon-left {
+            margin-left: 30px;
         }
     }
 }
