--- a/packages/ui-library/src/css/_collapsible-section.scss
+++ b/packages/ui-library/src/css/_collapsible-section.scss
@@ -46,6 +46,9 @@
                 border-radius: 50%;
             }
         }
+        &--full-width {
+            width: 100%;
+        }
         &--node {
             font-size: 14px;
             text-transform: none;
