UIP-3859: Flow manager left container

--- a/packages/flow-diagram/src/components/FlowManager/FlowManager.css
+++ b/packages/flow-diagram/src/components/FlowManager/FlowManager.css
@@ -3,17 +3,15 @@
   border: 1px solid #ccc;
   background: #F5F5F5;
 }
-.palette-wrapper {
-  flex: 0 0 300px;
+.left-container {
   border: 1px solid black;
-  padding-top: 50px;
-
 }
 
 .palette-component {
   width: 100%;
   height: 100%;
 }
+
 .wrapper {
   display: flex;
   height: 70%;
@@ -25,4 +23,8 @@ html, body, #root, #root > * {
 .overview-component {
   height: 30%;
   width: 400px;
+}
+
+canvas {
+  outline-width: 0;
 }
