--- a/packages/flow-diagram/src/components/FlowManager/FlowManager.css
+++ b/packages/flow-diagram/src/components/FlowManager/FlowManager.css
@@ -1,3 +1,9 @@
+.gsfBackground {
+  border-color: #b676c7;
+  font-size: 10;
+  margin-bottom: 5;
+}
+
 .diagram-component {
   flex: 1 1 auto;
   border: 1px solid #ccc;
