UIP-3936: Allow ModalMenu to accept icons and build template

--- a/packages/end-user/src/css/shared/_tile-selector.scss
+++ b/packages/end-user/src/css/shared/_tile-selector.scss
@@ -367,9 +367,10 @@ button.tile-button--side-icon {
 
 .tile-button--stacked-small,
 button.tile-button--stacked-small {
-    padding: $spacing-sm;
+    padding: $spacing-sm $spacing-md;
     margin-bottom: $spacing-md;
     margin-right: 0;
+    min-height: 75px;
 
     .tile-button {
         &__icon {
