--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -1,6 +1,16 @@
 // PATHS ---------------------------------------------------------------------------------------------------------------
 
-@import url('https://use.typekit.net/nxh5mrb.css');
+// Allow library users to specify whether or not to use typekit by
+// setting the $use-typekit variable in their sass file.
+$use-typekit: true !default;
+
+@mixin importTypekit($should-import: true) {
+    @if $should-import {
+        @import url('https://use.typekit.net/nxh5mrb.css');
+    }
+}
+
+@include importTypekit($use-typekit);
 
 
 // SPACING SCALE
