UIP-4065 Add scale balance icon

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -612,6 +612,11 @@
     content: $icon-saml;
   }
 }
+.icon-scale-balance {
+  &:before {
+    content: $icon-scale-balance; 
+  }
+}
 .icon-search {
   &:before {
     content: $icon-search;
