--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -124,6 +124,7 @@ $icon-resource: add-backslash("e92a");
 $icon-right: add-backslash("3e");
 $icon-robot: add-backslash("e92d");
 $icon-saml: add-backslash("e930");
+$icon-scale-balance: add-backslash("e95e");
 $icon-search: add-backslash("73");
 $icon-server: add-backslash("20ac");
 $icon-settings: add-backslash("53");
