UX-981: DeviceSelector, SaveableTextInput, & PopoverMenu for end-user

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -27,6 +27,7 @@ $layout-nav-width: 190px;       // used in miltiple include
 $line-height-default: 1.3em;
 
 // COLOR TOKENS
+$color-astro-blue: #2996cc;
 $color-active-blue: #277ba5;
 $color-active-blue-highlighted: #3d88ae;
 $color-critical-red: #a31300;
