UIP-3949: add styles for button-group in end-user

--- a/packages/end-user/src/css/components/_button.scss
+++ b/packages/end-user/src/css/components/_button.scss
@@ -304,4 +304,20 @@
         }
     }
 }
+// Consolidates styles for centered group of buttons with optional cancel link
+.button-group {
+    text-align: center;
+    white-space: nowrap;
+    a {
+        text-transform: none;
+        &.secondary {
+            color: $color-rhino;
+        }
+        &.cancel {
+            display: inline-block;
+            font-weight: normal;
+            font-size: $font-size-md;
+        }
+    }
+}
 
