--- a/packages/ui-library/src/css/_text.scss
+++ b/packages/ui-library/src/css/_text.scss
@@ -193,6 +193,7 @@
         margin-left: $spacing-sm;
         line-height: 18px;
         flex: 0 0 auto;
+        user-select: none;
 
         &:hover {
             text-decoration: none;
