UIP-3338: add logic for filtering country by typing its code UIP-3887: add styles for break words in IE

--- a/packages/end-user/src/css/_mixins.scss
+++ b/packages/end-user/src/css/_mixins.scss
@@ -196,8 +196,8 @@
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: break-word;
+    -ms-word-break: break-all; /*UIP-3887 since word-break: break-word does not work in IE11*/
 }
-
 
 // ANIMATION --------------------------------------------------------------------------------------
 
