add logic for changing styles for phone input if dial code is too long

--- a/packages/end-user/src/css/components/_phone-input.scss
+++ b/packages/end-user/src/css/components/_phone-input.scss
@@ -24,4 +24,14 @@
         right: 0;
         width: 75%;
     }
+    &__longDialCode {
+        .phone-input {
+            &__code {
+                width: calc(30% - #{$spacing-xs});
+            }
+            &__number {
+                width: 70%;
+            }
+        }
+    }
 }
