UIP-4111: fix floating element in ExpandableRow

--- a/packages/ui-library/src/css/_collapsible-section.scss
+++ b/packages/ui-library/src/css/_collapsible-section.scss
@@ -89,11 +89,12 @@
         }
     }
     .row-accessories {
-        float: unset;
-
         > * {
             margin-left: 10px;
         }
+    }
+    &__row-accessories {
+        float: unset;
     }
     &.disable-expand {
         .left:before,
