--- a/packages/end-user/src/css/shared/_collapsible-section.scss
+++ b/packages/end-user/src/css/shared/_collapsible-section.scss
@@ -63,11 +63,12 @@
         }
     }
     .row-accessories {
-        float: unset;
-
         > * {
             margin-left: 10px;
         }
+    }
+    &__row-accessories {
+        float: unset;
     }
     &.disable-expand {
         .left:before,
